# thermic_lstm

./: .gitignore  README.md  export_mcu.py  export_test_c.py  generate_plots.py  optuna_run.py  plot.py  qlstm_train.py  qtest.py  requirements.txt  run.py
backup/c/: activations.h  main.c  plot_preds.py  tanh.c
backup/c/old/: CMakeLists.txt  lstm_model_mp.h  main.c  test_lstm  vectors.h
backup/checkpoints/: best_qat.pth  lstm_lambda_tr_best.pt  lstm_pi_final.pt  mcu_export.npz  meta_qat.json  model_quant.h  quant_meta.json
c/: gen_vectors.py  lstm_model.h  main.c
c_backup/: run_infer  tanh_poly.c
c_backup/old/: lstm_model_ref.h
checkpoints/: best_params.json  best_qat.pth  last_qat.pth  lstm_lambda_ss_best.pt  lstm_std_final.pt  meta.json  meta_qat.json  model_int8.json  model_quant.h  quant_meta.json
checkpoints_backup/: best.pth  last.pth  last_qat.pth
docs/: parameters.md
export/: acts.h  engine.c  engine.h  weights.c
ie/: main.c
ie/include/: engine.h  model_offsets.h  ref_auto.h
ie/src/: acts.h  engine.c
inference_engine/: engine.c  engine.h  main.c  model_int8.h  run_infer  sigmoid.c  sigmoid_poly.c
paper/: slides.ods
paper/code/: config.py  data_utils.py  models.py  phys_models.py  train.py
paper/latex/: abstract.txt  background.txt  conclusions.txt  introduction.txt  methodology.txt  paper.txt  results.txt
src/: config.py  data_utils.py  dataset.py  models.py  phys_models.py  qat_int8.py  train.py
tools/: export.py  export_int8.py  gen_ref.py  json2offsets.py  launch_qat.sh  qat.py  test-qat.py  test.py  train.py
